--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -47,7 +47,8 @@
 
           <div class="buttons">
             <div class="col-md-3">
-            <button id="primeiro_botao" type="submit">CANCELAR</button>
+              <a href="../../index.html"> <button id="primeiro_botao" type="submit"> CANCELAR</button></a>
+           
           </div>
           <div class="col-md-3">
             <button id="segundo_botao" type="">SALVAR</button>
