--- a/instituicao/perfil/infos_pagamento/editar/index.html
+++ b/instituicao/perfil/infos_pagamento/editar/index.html
@@ -43,7 +43,7 @@
 
           <div class="buttons">
             <div class="col-md-3">
-            <button id="primeiro_botao" type="submit">CANCELAR</button>
+            <button id="primeiro_botao" type="submit"><a href="../index.html">CANCELAR</a> </button>
           </div>
 
           <div class="col-md-3">
