--- a/instituicao/index.html
+++ b/instituicao/index.html
@@ -52,10 +52,10 @@
     </form>
     <div class="button">
       <div class="col-md-6">
-        <button id="primeiro_botao" type="submit"> <a href="../instituicao/perfil/infos_pagamento/index.html"></a> INFORMAÇÕES DE PAGAMENTO</button>
+       <a href="../instituicao/perfil/infos_pagamento/index.html"> <button id="primeiro_botao" type="submit"> INFORMAÇÕES DE PAGAMENTO</button></a> 
       </div>
       <div class="col-md-3">
-        <button id="segundo_botao" type="submit"> <a href="./perfil/editar/index.html">EDITAR</a> </button>
+        <a href="./perfil/editar/index.html"><button id="segundo_botao" type="submit"> EDITAR</button></a> 
       </div>
       <div class="col-md-3">
         <button id="terceiro_botao" type="">EXCLUIR</button>
@@ -71,12 +71,12 @@
 
     <div>
       <label for="senha-label" class="form-label">Insira sua senha para confirmar a ação:</label>
-      <input type="password" class="form-control senha-label" placeholder="Nexus@5">
+      <input type="password" class="form-control senha-label">
     </div>
 
     <div class="buttons">
       <button class="col-md-3" id="primeiro_botao_modal" onclick="exitModal()">CANCELAR</button>
-      <button class="col-md-3" id="segundo_botao_modal">CONFIRMAR</button>
+      <button class="col-md-3" id="segundo_botao_modal" onclick="exitModal()">CONFIRMAR</button>
     </div>
 
   </div>
