--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -17,41 +17,41 @@
   </head>
   <body>
     <div class="container mt-5 container">
-        <h1>PERFIL DA INSTITUIÇÃO</h1>
+        <h1>EDITAR PERFIL DA INSTITUIÇÃO</h1>
         <form class="row g-3">
           <div class="col-md-12" id="icon">
             <label for="email_institucional" class="form-label">E-mail institucional</label>
-            <input type="email" class="form-control email_institucional" placeholder="unicuritiba@gmail.com" required> 
+            <input type="email" class="form-control email_institucional" placeholder="unicuritiba@gmail.com" > 
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
             <label for="nome_da_instituicao" class="form-label">Nome da instituição</label>
-            <input type="text" class="form-control nome_da_instituicao" placeholder="Universidade De Curitiba " required>
+            <input type="text" class="form-control nome_da_instituicao" placeholder="Universidade De Curitiba ">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
             <label for="cnpj" class="form-label">CNPJ</label>
-            <input type="text" class="form-control cnpj" placeholder="42.591.538/0001-68" required>
+            <input type="text" class="form-control cnpj" placeholder="42.591.538/0001-68">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
             <label for="telefone" class="form-label">Telefone</label>
-            <input type="text" class="form-control telefone" placeholder="+55 (11) 99869-7564" required>
+            <input type="text" class="form-control telefone" placeholder="+55 (11) 99869-7564">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
             <label for="senha" class="form-label">Senha</label>
-            <input type="senha" class="form-control senha" placeholder="Nexus@5" required>
+            <input type="senha" class="form-control senha" placeholder="Nexus@5">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
 
           <div class="buttons">
             <div class="col-md-3">
-              <a href="../../index.html"> <button id="primeiro_botao" type="submit"> CANCELAR</button></a>
-           
+              <button id="primeiro_botao" type="submit"><a href="../../index.html">CANCELAR</a></button>
           </div>
+
           <div class="col-md-3">
-            <button id="segundo_botao" type="">SALVAR</button>
+            <button id="segundo_botao" type=""><a href="../../index.html">SALVAR</a></button>
           </div>
           </div>
           
