--- a/instituicao/perfil/infos_pagamento/editar/index.html
+++ b/instituicao/perfil/infos_pagamento/editar/index.html
@@ -19,25 +19,25 @@
 
           <div class="col-md-12" id="icon">
             <label for="numero_do_cartao" class="form-label">Número do cartão</label>
-            <input type="text" class="form-control numero_do_cartao" placeholder="1234 5678 9101 1213" required>
+            <input type="text" class="form-control numero_do_cartao" placeholder="1234 5678 9101 1213">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
 
           <div class="col-md-12" id="icon">
             <label for="nome_no_cartao" class="form-label">Nome no cartão</label>
-            <input type="text" class="form-control nome_no_cartao" placeholder="Alice Pereira" required>
+            <input type="text" class="form-control nome_no_cartao" placeholder="Alice Pereira">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
 
           <div class="col-md-6" id="icon">
             <label for="validade" class="form-label">Validade</label>
-            <input type="text" class="form-control validade" placeholder="02/29" required>
+            <input type="text" class="form-control validade" placeholder="02/29">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
 
           <div class="col-md-6" id="icon">
             <label for="cvv" class="form-label">CVV</label>
-            <input type="text" class="form-control cvv" placeholder="123" required>
+            <input type="text" class="form-control cvv" placeholder="123">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
 
@@ -47,7 +47,7 @@
           </div>
 
           <div class="col-md-3">
-            <button id="segundo_botao" type="">SALVAR</button>
+            <button id="segundo_botao" type=""><a href="../../../index.html">SALVAR</a></button>
           </div>
           </div>
           
