--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -41,11 +41,11 @@
       </div>
 
       <div class="buttons">
-        <div class="col-md-3 primeiro_botao">
-          <button id="segundo_botao" type="submit"><a href="../../index.html">CANCELAR</a> </button>
+        <div class="col-md-3 primeiro_botao"> 
+          <button id="segundo_botao" type="submit"><a href="../../../instituicao/index.html">CANCELAR</a></button>
         </div>
         <div class="col-md-3 primeiro_botao">
-          <button id="primeiro_botao" type="submit"><a href="./editar/index.html">EDITAR</a></button>
+         <button id="primeiro_botao" type="submit"> <a href="./editar/index.html">EDITAR</a></button>
         </div>
       </div>
 
