--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -153,22 +153,22 @@
         <h1>CRIAR NOVO USUÁRIO</h1>
         <form class="row g-7">
 
-            <div class="col-md-12">
+            <div class="col-md-12 lab-inp">
                 <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
                 <input type="text" class="form-control nome_do_usuario" placeholder="unicuritiba@gmail.com">
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6 lab-inp">
                 <label for="email_usuario" class="form-label">Email do usuário</label>
                 <input type="email" class="form-control email_usuario" placeholder="Universidade De Curitiba ">
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6 lab-inp">
                 <label for="senha" class="form-label">Senha</label>
                 <input type="text" class="form-control senha" placeholder="42.591.538/0001-68">
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6 lab-inp">
                 <label for="tipo-select" class="form-label">Tipo</label>
                 <select class="form-select tipo-select" aria-label="Default select example">
                     <option selected>Open this select menu</option>
@@ -178,7 +178,58 @@
                 </select>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6 lab-inp">
+                <label for="turma-select" class="form-label">Turma</label>
+                <select class="form-select turma-select" aria-label="Default select example">
+                    <option selected>Open this select menu</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+
+            <div class="buttons">
+                <div class="col-md-3">
+                    <button id="primeiro_botao" type="submit" onclick="exitModal()">CANCELAR</button>
+                </div>
+
+                <div class="col-md-3">
+                    <button id="segundo_botao" onclick="showModalEditar()" type="submit">EDITAR</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <div class="container mt-5 container modal-editar">
+        <h1>CRIAR NOVO USUÁRIO</h1>
+        <form class="row g-7">
+
+            <div class="col-md-12 lab-inp">
+                <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
+                <input type="text" class="form-control nome_do_usuario" placeholder="unicuritiba@gmail.com">
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="email_usuario" class="form-label">Email do usuário</label>
+                <input type="email" class="form-control email_usuario" placeholder="Universidade De Curitiba ">
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="senha" class="form-label">Senha</label>
+                <input type="text" class="form-control senha" placeholder="42.591.538/0001-68">
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="tipo-select" class="form-label">Tipo</label>
+                <select class="form-select tipo-select" aria-label="Default select example">
+                    <option selected>Open this select menu</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+
+            <div class="col-md-6 lab-inp">
                 <label for="turma-select" class="form-label">Turma</label>
                 <select class="form-select turma-select" aria-label="Default select example">
                     <option selected>Open this select menu</option>
@@ -194,7 +245,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <button id="segundo_botao" onclick="exitModal()" type="submit">EDITAR</button>
+                    <button id="segundo_botao" type="submit">SALVAR</button>
                 </div>
             </div>
         </form>
