--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -32,7 +32,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
                         data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
@@ -47,7 +47,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
                         data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
@@ -62,7 +62,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
                         data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
@@ -77,7 +77,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
                         data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
@@ -92,7 +92,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
                         data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
@@ -107,7 +107,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
                         data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
@@ -122,7 +122,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
                         data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
@@ -137,7 +137,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
                         data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
@@ -190,62 +190,11 @@
 
             <div class="buttons">
                 <div class="col-md-3">
-                    <button id="primeiro_botao" type="submit" onclick="exitModal()">CANCELAR</button>
+                    <button id="primeiro_botao" type="button" onclick="exitModal()">CANCELAR</button>
                 </div>
 
                 <div class="col-md-3">
-                    <button id="segundo_botao" onclick="showModalEditar()" type="submit">EDITAR</button>
-                </div>
-            </div>
-        </form>
-    </div>
-
-    <div class="container mt-5 container modal-editar">
-        <h1>CRIAR NOVO USUÁRIO</h1>
-        <form class="row g-7">
-
-            <div class="col-md-12 lab-inp">
-                <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
-                <input type="text" class="form-control nome_do_usuario" placeholder="unicuritiba@gmail.com">
-            </div>
-
-            <div class="col-md-6 lab-inp">
-                <label for="email_usuario" class="form-label">Email do usuário</label>
-                <input type="email" class="form-control email_usuario" placeholder="Universidade De Curitiba ">
-            </div>
-
-            <div class="col-md-6 lab-inp">
-                <label for="senha" class="form-label">Senha</label>
-                <input type="text" class="form-control senha" placeholder="42.591.538/0001-68">
-            </div>
-
-            <div class="col-md-6 lab-inp">
-                <label for="tipo-select" class="form-label">Tipo</label>
-                <select class="form-select tipo-select" aria-label="Default select example">
-                    <option selected>Open this select menu</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-            </div>
-
-            <div class="col-md-6 lab-inp">
-                <label for="turma-select" class="form-label">Turma</label>
-                <select class="form-select turma-select" aria-label="Default select example">
-                    <option selected>Open this select menu</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-            </div>
-
-            <div class="buttons">
-                <div class="col-md-3">
-                    <button id="primeiro_botao" type="submit">CANCELAR</button>
-                </div>
-
-                <div class="col-md-3">
-                    <button id="segundo_botao" type="submit">SALVAR</button>
+                    <button id="segundo_botao" onclick="exitModal()" type="button">SALVAR</button>
                 </div>
             </div>
         </form>
