interface do formulário de pagamento finalizada

--- a/home/compra/pagamento/index.html
+++ b/home/compra/pagamento/index.html
@@ -68,7 +68,7 @@
                             <label for="inputNomeInstituicao">Nome da Instituição</label>
                             <div class="input_dados_instituicao">
                                 <input id="inputNomeInstituicao" name="inputNomeInstituicao" type="text" placeholder="Nome da Instituição"  />
-                                <p>Error mesage</p>
+                                <p><small>Error mesage</small></p>
                             </div>
                         </div>
 
@@ -76,7 +76,7 @@
                             <label for="inputEmailInstituicao">E-mail Institucional</label>
                             <div class="input_dados_instituicao">
                                 <input id="inputEmailInstituicao" name="inputEmailInstituicao" type="email" placeholder="E-mail Institucional"  />
-                                <p>Error mesage</p>
+                                <p><small>Error mesage</small></p>
                             </div>
                         </div>
 
@@ -84,7 +84,7 @@
                             <label for="inputConfirmarEmail">Confirme seu E-mail</label>
                             <div class="input_dados_instituicao">
                                 <input id="inputConfirmarEmail" name="inputConfirmarEmail" type="email" placeholder="Confirme seu E-mail"  />
-                                <p>Error mesage</p>
+                                <p><small>Error mesage</small></p>
                             </div>
                         </div>
 
@@ -92,7 +92,7 @@
                             <label for="inputSenhaInstituicao">Senha</label>
                             <div class="input_dados_instituicao">
                                 <input id="inputSenhaInstituicao" name="inputSenhaInstituicao" type="password" placeholder="Senha"  />
-                                <p>Error mesage</p>
+                                <p><small>Error mesage</small></p>
                             </div>
                         </div>
 
@@ -100,7 +100,7 @@
                             <label for="inputConfirmarSenha">Confirme sua senha</label>
                             <div class="input_dados_instituicao">
                                 <input id="inputConfirmarSenha" name="inputConfirmarSenha" type="password" placeholder="Confirme sua senha"  />
-                                <p>Error mesage</p>
+                                <p><small>Error mesage</small></p>
                             </div>
                         </div>
 
@@ -108,7 +108,7 @@
                             <label for="inputTelefoneInstituicao">Telefone</label>
                             <div class="input_dados_instituicao">
                                 <input id="inputTelefoneInstituicao" name="inputTelefoneInstituicao" type="text" placeholder="Telefone"  />
-                                <p>Error mesage</p>
+                                <p><small>Error mesage</small></p>
                             </div>
                         </div>
 
@@ -116,37 +116,34 @@
                             <label for="inputCnpjInstituicao">CNPJ</label>
                             <div class="input_dados_instituicao">
                                 <input id="inputCnpjInstituicao" name="inputCnpjInstituicao" type="text" placeholder="CNPJ"  />
-                                <p>Error mesage</p>
+                                <p><small>Error mesage</small></p>
                             </div>
                         </div>
 
                     </div>
-
-
-
 
                     <div class="infos_cartao">
 
                         <div class="infos_cartao_inputs">
                             <div class="input_cartao_instituicao">
                                 <input id="inputNumeroCartao" name="inputNumeroCartao" type="number" placeholder="Número do cartão"  />
-                                <p>Error mesage</p>
+                                <p><small>Error mesage</small></p>
                             </div>
 
                             <div class="input_cartao_instituicao">
                                 <input id="inputNomeCartao" name="inputNomeCartao" type="text" placeholder="Nome no cartão"  />
-                                <p>Error mesage</p>
+                                <p><small>Error mesage</small></p>
                             </div>
 
                             <div class="inputs_cartao">
                                 <div class="input_cartao_instituicao">
                                     <input id="inputDataValidadeCartao" name="inputDataValidadeCartao" type="text" placeholder="Data de validade (mm/aaaa)" />
-                                    <p>Error mesage</p>
+                                    <p><small>Error mesage</small></p>
                                 </div>
                                 
                                 <div class="input_cartao_instituicao">
                                     <input id="inputCvvCartao" name="inputCvvCartao" type="number" placeholder="Código de segurança"  />
-                                    <p>Error mesage</p>
+                                    <p><small>Error mesage</small></p>
                                 </div>
                             </div>
 
@@ -163,86 +160,6 @@
                     <input type="submit" value="FINALIZAR PEDIDO →">
                 </div>
             </form>
-            <!-- <div class="form_pagamento">
-                <form id="form_pagamento" onsubmit="criarInstituicao()">
-                    <div class="infos_gerais">
-                        <div class="infos_instituicao">
-                        <div class="input_instituicao sucesso">
-                            <label for="inputNomeInstituicao">Nome da Instituição</label>
-                            <div class="input_dados_instituicao">
-                                <input id="inputNomeInstituicao" name="inputNomeInstituicao" type="text" placeholder="Nome da Instituição"  />
-                                <p>Error mesage</p>
-                            </div>
-                        </div>
-                        <div class="input_instituicao erro">
-                            <label for="inputEmailInstituicao">E-mail Institucional</label>
-                            <div class="input_dados_instituicao">
-                                <input id="inputEmailInstituicao" name="inputEmailInstituicao" type="email" placeholder="E-mail Institucional"  />
-                                <p>Error mesage</p>
-                            </div>
-                        </div>
-                        <div class="input_instituicao">
-                            <label for="inputConfirmarEmail">Confirme seu E-mail</label>
-                            <div class="input_dados_instituicao">
-                                <input id="inputConfirmarEmail" name="inputConfirmarEmail" type="email" placeholder="Confirme seu E-mail"  />
-                                <p>Error mesage</p>
-                            </div>
-                        <div class="input_instituicao">
-                            <label for="inputSenhaInstituicao">Senha</label>
-                            <div class="input_dados_instituicao">
-                                <input id="inputSenhaInstituicao" name="inputSenhaInstituicao" type="password" placeholder="Senha"  />
-                                <p>Error mesage</p>
-                            </div>
-                        </div>
-                        <div class="input_instituicao">
-                            <label for="inputConfirmarSenha">Confirme sua senha</label>
-                            <div class="input_dados_instituicao">
-                                <input id="inputConfirmarSenha" name="inputConfirmarSenha" type="password" placeholder="Confirme sua senha"  />
-                                <p>Error mesage</p>
-                            </div>
-                        </div>
-                        <div class="input_instituicao">
-                            <label for="inputTelefoneInstituicao">Telefone</label>
-                            <div class="input_dados_instituicao">
-                                <input id="inputTelefoneInstituicao" name="inputTelefoneInstituicao" type="text" placeholder="Telefone"  />
-                                <p>Error mesage</p>
-                            </div>
-                        </div>
-                        <div class="input_instituicao">
-                            <label for="inputCnpjInstituicao">CNPJ</label>
-                            <div class="input_dados_instituicao">
-                                <input id="inputCnpjInstituicao" name="inputCnpjInstituicao" type="text" placeholder="CNPJ"  />
-                                <p>Error mesage</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cartao_instituicao">
-                        <div class="input_cartao_instituicao">
-                            <input id="inputNumeroCartao" name="inputNumeroCartao" type="number" placeholder="Número do cartão"  />
-                            <p>Error mesage</p>
-                        </div>
-                        <div class="input_cartao_instituicao">
-                            <input id="inputNomeCartao" name="inputNomeCartao" type="text" placeholder="Nome no cartão"  />
-                            <p>Error mesage</p>
-                        </div>
-                        <div class="inputs_cartao">
-                            <div class="input_cartao_instituicao">
-                                <input id="inputDataValidadeCartao" name="inputDataValidadeCartao" type="text" placeholder="Data de validade (mm/aaaa)" />
-                                <p>Error mesage</p>
-                            </div>
-                            <div class="input_cartao_instituicao">
-                                <input id="inputCvvCartao" name="inputCvvCartao" type="number" placeholder="Código de segurança"  />
-                                <p>Error mesage</p>
-                            </div>
-                        </div>
-                        <img src="img/cartao.svg" alt="cartao" />
-                    </div>
-                </div>
-                    <div class="btn_finalizar">
-                        <input type="submit" value="FINALIZAR PEDIDO →" />
-                    </div>
-                </form>
-            </div> -->
         </main>
 
         <footer>
