RF05 e RF03 finalizados

--- a/instituicao/perfil/infos_pagamento/editar/index.html
+++ b/instituicao/perfil/infos_pagamento/editar/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container mt-5 container">
-        <h1>INFORMAÇÕES DE PAGAMENTO</h1>
+        <h1>EDITAR INFORMAÇÕES DE PAGAMENTO</h1>
         <form class="row g-3">
 
           <div class="col-md-12" id="icon">
