--- a/instituicao/usuarios/vizualizacao/index.html
+++ b/instituicao/usuarios/vizualizacao/index.html
@@ -222,18 +222,18 @@
 
             <div class="buttons">
                 <div class="col-md-3">
-                    <button id="segundo_botao" type="button" onclick="exitChangeModalEditar()">CANCELAR</button>
+                    <button id="terceiro_botao" type="button" onclick="exitChangeModalEditar()">CANCELAR</button>
                 </div>
 
                 <div class="col-md-3">
-                    <button id="terceiro_botao" type="button" onclick="exitChangeModalEditar()">SALVAR</button>
+                    <button id="segundo_botao" type="button" onclick="exitChangeModalEditar()">SALVAR</button>
                 </div>
             </div>
 
         </form>
     </div>
 
-    <div class="container mt-5 container modal modal-excluir">
+    <div class="container mt-5 container modal modal-excluir" id="modal-excluir">
         <h1>Deseja excluir esse usuário?</h1>
         <h2>Lembre-se que essa é uma ação irreversível!</h2>
 
@@ -244,7 +244,7 @@
 
         <div class="buttons">
             <div class="col-md-3">
-                <button id="segundo_botao" type="button" onclick="exitchangeModalExcluir()">CANCELAR</button>
+                <button id="terceiro_botao" type="button" onclick="exitchangeModalExcluir()">CANCELAR</button>
             </div>
 
             <div class="col-md-3">
