teste de validação do envio do form (correção de erros)
Co-Authored-By: Cauã Menezes <79976791+cauamenezes@users.noreply.github.com>

--- a/instituicao/index.html
+++ b/instituicao/index.html
@@ -27,27 +27,27 @@
 
       <div class="col-md-12">
         <label for="email_institucional" class="form-label">E-mail institucional</label>
-        <input type="email" class="form-control email_institucional" placeholder="unicuritiba@gmail.com">
+        <input id="input_email_institucional" type="email" class="form-control email_institucional" disabled>
       </div>
 
       <div class="col-md-6">
         <label for="nome_da_instituicao" class="form-label">Nome da instituição</label>
-        <input type="text" class="form-control nome_da_instituicao" placeholder="Universidade De Curitiba ">
+        <input id="nome_instituicao" type="text" class="form-control nome_da_instituicao" disabled>
       </div>
 
       <div class="col-md-6 for-cnp">
         <label for="cnpj" class="form-label">CNPJ</label>
-        <input type="text" class="form-control cnpj" placeholder="42.591.538/0001-68">
+        <input id="cnpj_instituicao" type="text" class="form-control cnpj" disabled>
       </div>
 
       <div class="col-md-6">
         <label for="telefone" class="form-label">Telefone</label>
-        <input type="text" class="form-control telefone" placeholder="+55 (11) 99869-7564">
+        <input id="telefone_instituicao" type="text" class="form-control telefone" disabled>
       </div>
 
       <div class="col-md-6">
         <label for="senha" class="form-label">Senha</label>
-        <input type="password" class="form-control senha" placeholder="Nexus@5">
+        <input id="senha_instituicao" type="password" class="form-control senha" disabled>
       </div>
     </form>
     <div class="button">
