--- a/home/compra/pagamento/index.html
+++ b/home/compra/pagamento/index.html
@@ -8,6 +8,16 @@
         <link rel="stylesheet" href="../../componentes/footer/styles_footer.css">
         <link rel="stylesheet" href="pagamento.css" />
         <script src="scripts.js" defer></script>
+
+        <script type="text/javascript" src="../../../jquery/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="../../../jquery/jquery.mask.min.js"></script>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
+
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+ <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
+
         <title>Pagamento</title>
     </head>
     <body>
