--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -10,38 +10,44 @@
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" 
-          href=
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script src="./script.js"></script>
+
     <title>EDIÇÃO DE PERFIL</title>
   </head>
   <body>
     <div class="container mt-5 container">
         <h1>EDITAR PERFIL DA INSTITUIÇÃO</h1>
-        <form class="row g-3">
+        <form onsubmit="editarInstituicao()" class="row g-3">
+
           <div class="col-md-12" id="icon">
             <label for="email_institucional" class="form-label">E-mail institucional</label>
-            <input type="email" class="form-control email_institucional" placeholder="unicuritiba@gmail.com" > 
+            <input id="input_email_institucional" type="email" class="form-control email_institucional"> 
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
+
           <div class="col-md-6" id="icon">
             <label for="nome_da_instituicao" class="form-label">Nome da instituição</label>
-            <input type="text" class="form-control nome_da_instituicao" placeholder="Universidade De Curitiba ">
+            <input id="nome_instituicao" type="text" class="form-control nome_da_instituicao">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
+
           <div class="col-md-6" id="icon">
             <label for="cnpj" class="form-label">CNPJ</label>
-            <input type="text" class="form-control cnpj" placeholder="42.591.538/0001-68">
+            <input id="cnpj_instituicao" type="text" class="form-control cnpj">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
+
           <div class="col-md-6" id="icon">
             <label for="telefone" class="form-label">Telefone</label>
-            <input type="text" class="form-control telefone" placeholder="+55 (11) 99869-7564">
+            <input id="telefone_instituicao" type="text" class="form-control telefone">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
+
           <div class="col-md-6" id="icon">
             <label for="senha" class="form-label">Senha</label>
-            <input type="senha" class="form-control senha" placeholder="Nexus@5">
+            <input id="senha_instituicao" type="senha" class="form-control senha">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
 
@@ -51,8 +57,9 @@
           </div>
 
           <div class="col-md-3">
-            <button id="segundo_botao" type=""><a href="../../index.html">SALVAR</a></button>
+            <input type="submit" id="segundo_botao" value="SALVAR">
           </div>
+
           </div>
           
         </form>
